
2007-07-07  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Regenerate the team page _after_ the symlink in
	latest/ has been made.

	* registry/Makefile: Make the target for normalizing whitespace
	simpler, so it can be used locally without any commits.

2007-07-05  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Remove the obsolete domains 'fileutils',
	'sh-utils', and 'textutils'; they were merged to form 'coreutils'.
	Remove 'gettext' too; it was split into three subpackages.

	* bin/tp-robot: Remove dead code, tweak some messages.

2007-07-04  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Use clearer table headers for the team pages.

	* lib/run.py: Let the robot send me copies of the emails it sends,
	so I can see what gets accepted and rejected and why.

	* registry/registry.sgml: The GNU software pages are just pages, not
	sites.  Change "Home page" to the modern "Homepage".

	* lib/sgml.py: Report an empty <do> tag when encoding the registry.

2007-07-03  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Remove packages that do not contain a POT
	file: cantus_3, cook, flphoto, gnupg, jade, libtododb, pandora_*.

	* registry/Makefile: Add a target to normalize whitespace in the
	registry.sgml file.

	* webgen/layout.html.in: Add links to the latest/ and obsolete/ dirs.

	* tools/mirror_tp.py, tools/mkindex.py: Tweak the scripts to mirror
	only the actual data, not the web pages, not the code.

2007-07-02  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/registry.py: Make 2.5g a lower version than 2.5.1 (for grep).

	* lib/localweb.py: Make the globbing pattern more precise, so that
	bison-runtime versions aren't listed on the bison page, for example.

	* bin/run-queue.sh: Don't run the robot when an admin is busy with
	things that modify the cache/postats file.

	* registry/registry.sgml: Remove obsolete package 'gnucash-glossary'.

	* webgen/maintainers.all: Mention the possibility of 'external'.