@@ -15,7 +15,7 @@ HTMH_FILES = welcome.html thanks.html whydisclaim.html
 LAYOUT_DEPS = ../lib/config.py ../lib/htmlpage.py layout.html.in to-html.py
 
 
-all: alloutfiles htmlfiles $(sitedir)/index.html $(sitedir)/disclaim.txt
+all: alloutfiles htmlfiles $(sitedir)/disclaim.txt
 
 $(htmldir):
 	mkdir -p $@
@@ -30,9 +30,6 @@ $(htmldir)/%.html: %.all $(LAYOUT_DEPS)
 
 $(htmldir)/%.html: %.html $(LAYOUT_DEPS)
 	./to-html.py -C $(htmldir) $<
-
-$(sitedir)/index.html: stepinto.html.in
-	cp stepinto.html.in $(sitedir)/index.html
 
 $(sitedir)/disclaim.txt: disclaim.txt
 	cp disclaim.txt $(sitedir)/disclaim.txt
