@@ -1,4 +1,9 @@
 
+2007-07-09  Benno Schulenberg  <benno@vertaalt.nl>
+
+	* webgen/Makefile, webgen/stepinto.html.in: Remove the redirecting
+	index page, made obsolete by a permanent redirection in Apache.
+
 2007-07-07  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* bin/po-register: Regenerate the team page _after_ the symlink in
